<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">HitchGo</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">559710814361208</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb559710814361208</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <!-- Google API key -->
    <string name="google_api_key_map_and_places" translatable="false">AIzaSyA9CESc-y4ilHJRNMne7_H8PsUeAynaNm0</string>

    <!-- Firebase "folder" name / structure of the database -->
    <string name="firebase_folder_users" translatable="false">users/</string>
    <string name="firebase_folder_supply" translatable="false">supply/</string>
    <string name="firebase_folder_demand" translatable="false">demand/</string>
    <string name="firebase_folder_history" translatable="false">history/</string>
    <string name="firebase_folder_geofire_supply" translatable="false">geofire/geofire-supply</string>
    <string name="firebase_folder_geofire_demand" translatable="false">geofire/geofire-demand</string>

    <!-- SharedPreferences -->
    <string name="preference_file_key" translatable="false">com.realtimehitchhiker.hitchgo.PREFERENCE_FILE_KEY</string>
    <string name="pref_radius" translatable="false">radiusInt</string>
    <string name="pref_supply_status" translatable="false">supplyBool</string>
    <string name="pref_demand_status" translatable="false">demandBool</string>
    <string name="pref_supply_seats_in_car" translatable="false">supplySeatsInt</string>
    <string name="pref_demand_seats_in_car" translatable="false">demandSeatsInt</string>
    <string name="pref_main_request_boolean" translatable="false">mainRequestBool</string>
    <string name="pref_main_supply_request_boolean" translatable="false">mainSupplyRequestBool</string>
    <string name="pref_phone_number" translatable="false">phoneNumberString</string>
    <string name="pref_supply_fuel_price" translatable="false">supplyFuelPriceInt</string>
    <string name="pref_supply_pet" translatable="false">supplyPetBool</string>
    <string name="pref_demand_pet" translatable="false">demandPetBool</string>
    <string name="pref_language" translatable="false">languageString</string>
    <string name="pref_demand_booked_status" translatable="false">bookBool</string>
    <string name="pref_supply_booked_status" translatable="false">bookBool</string>
    <string name="pref_resultKey_forDemand" translatable="false">resultKey_forDemandStringSet</string>
    <string name="pref_resultKey_forSupply" translatable="false">resultKey_forSupplyStringSet</string>
    <string name="pref_historyKey" translatable="false">historyKeyString</string>
    <string name="pref_destination" translatable="false">destinationString</string>
    <string name="pref_flagThereIsOneRequestAlready" translatable="false">flagThereIsOneRequestAlreadyString</string>
    <string name="pref_flagThereIsOneSupplyAlready" translatable="false">flagThereIsOneSupplyAlreadyString</string>

    <!-- Notification -->
    <string name="channel_id" translatable="false">com.realtimehitchhiker.hitchgo.NOTIFICATION_CHANNEL_ID</string>
    <string name="channel_name" translatable="false">HitchGo notification</string>
    <string name="channel_description" translatable="false">HitchGo NOTIFICATION_CHANNEL</string>
    <string name="notification_supply_found_title">HitchGo found a ride !</string>
    <string name="notification_supply_found_text">Click here to confirm</string>
    <string name="notification_demand_found_title">HitchGo found a rider !</string>
    <string name="notification_demand_found_text">Click here to see</string>
    <string name="notification_location_off_title">HitchGo alert</string>
    <string name="notification_location_off_text">Your location is turn off, but HitchGo app still need it</string>

    <!-- MAIN -->
    <string name="button_demand">Request a ride</string>
    <string name="button_demand_cancel">Cancel request</string>
    <string name="button_demand_finish">Finish request</string>
    <string name="button_supply">Supply a ride</string>
    <string name="button_supply_cancel">Cancel supply</string>
    <string name="button_supply_finish">Finish supply</string>
    <string name="button_seeResultDemand">See result</string>
    <string name="button_seeResultSupply">See result</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_location_title">Location is required</string>
    <string name="alert_dialog_location_message">Location is not enabled. Do you want to go to settings menu?</string>
    <string name="alert_dialog_supply_title">Supply Settings</string>
    <string name="alert_dialog_supply_message">Set the details and click OK</string>
    <string name="alert_dialog_demand_title">Request Settings</string>
    <string name="alert_dialog_demand_message">Set the details and click OK</string>
    <string name="alert_dialog_permission_location_title">App needs Location permission</string>
    <string name="alert_dialog_permission_location_message">Grant to location permission or leave the app</string>
    <string name="alert_dialog_permission_location_negative_button">Leave the app</string>
    <string name="alert_dialog_phone_number_title">Phone number checking</string>
    <string name="alert_dialog_phone_number_message">Enter your phone number please</string>
    <string name="ui_welcome_logged_in">Welcome</string>
    <string name="ui_welcome_logged_out">Welcome, please log in</string>
    <string name="toast_sign_in_cancelled">Sign in cancelled by the user</string>
    <string name="toast_no_internet_connection">No Internet Connection</string>
    <string name="toast_not_logged_in">You are not logged in\nLog in please</string>
    <string name="toast_no_location_fix">Enable location or wait for location fix</string>
    <string name="toast_invalid_phone_number">Invalid phone number</string>
    <!-- Spinner language -->
    <string-array name="languages" translatable="false">
        <item>English</item>
        <item>עיברית</item>
    </string-array>

    <!-- DialogSettings -->
    <string name="button_plus" translatable="false">+</string>
    <string name="button_minus" translatable="false">-</string>
    <string name="txt_hint_destination">Enter destination</string>
    <string name="txt_picker_destination">Or pick on a the map</string>

    <!-- DialogSupplySettings -->
    <string name="txt_fuel_price">Fuel price</string>
    <string name="txt_seat_supply">Seats available</string>
    <string name="check_box_pet_supply">Allow pet</string>

    <!-- DialogDemandSettings -->
    <string name="txt_seat_demand">Seats needed</string>
    <string name="check_box_pet_demand">Have a pet</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_radius">radius</string>
    <string name="settings_radius_unit">km</string>

    <!-- Result (Demand and Supply) -->
    <string name="result">Drive confirmation</string>
    <string name="button_result_call">Call driver</string>
    <string name="button_result_call_demand">Call rider</string>
    <string name="button_result_book">Book driver</string>
    <string name="button_result_map">Find rider on map</string>
    <string name="button_next" translatable="false">\u003E</string>
    <string name="button_prev" translatable="false">\u003C</string>
    <string name="txtDetails_dest">Destination :\u0020</string>  <!-- \u0020 is unicode for character space : " " -->
    <string name="txtDetails_price">Fuel price :\u0020</string>
    <string name="txtDetails_petAllowed">Pet allowed :\u0020</string>
    <string name="txtDetails_petAllowed_true">Yes</string>
    <string name="txtDetails_petAllowed_false">No</string>
    <string name="txtDetails_remainingSeats">Remaining seats :\u0020</string>
    <string name="txtDetails_requestingSeats">Requesting seats :\u0020</string>
    <string name="txtProfile_name">Driver\'s name :\u0020</string>
    <string name="txtProfile_phone">Driver\'s phone :\u0020</string>
    <string name="txtProfile_resultSupply_name">Rider\'s name :\u0020</string>
    <string name="txtProfile_resultSupply_phone">Rider\'s phone :\u0020</string>
    <string name="toast_all_seats_gone">Could not book, all the seats are already gone…</string>
    <string name="toast_all_seats_gone_or_supply_canceled">Could not book, all the seats are already gone…</string>

    <!-- Example General settings (not in use)-->
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
</resources>
