<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<FrameLayout
            android:id="@+id/place_autocomplete_fragment_demand_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /> -->

        <fragment
            android:id="@+id/place_autocomplete_fragment_demand"
            android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_seats_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/txt_seat_demand"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/place_autocomplete_fragment_demand"
            app:layout_constraintStart_toStartOf="@+id/place_autocomplete_fragment_demand"
            app:layout_constraintTop_toBottomOf="@+id/button_placePicker_demand" />

        <CheckBox
            android:id="@+id/checkBox_pet_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checked="false"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/check_box_pet_demand"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/textView_seats_demand"
            app:layout_constraintStart_toStartOf="@+id/textView_seats_demand"
            app:layout_constraintTop_toBottomOf="@+id/textView_seats_demand" />

        <Button
            android:id="@+id/button_seats_demand_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/button_minus"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_seats_demand"
            app:layout_constraintStart_toStartOf="@+id/place_autocomplete_fragment_demand" />

        <Button
            android:id="@+id/button_seats_demand_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/button_plus"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_seats_demand"
            app:layout_constraintEnd_toEndOf="@+id/place_autocomplete_fragment_demand" />

        <Button
            android:id="@+id/button_placePicker_demand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:text="@string/txt_picker_destination"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/place_autocomplete_fragment_demand"
            app:layout_constraintStart_toStartOf="@+id/place_autocomplete_fragment_demand"
            app:layout_constraintTop_toBottomOf="@+id/place_autocomplete_fragment_demand" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>