<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.realtimehitchhiker.hitchgo.SettingsActivity">

    <TextView
        android:id="@+id/textView_prefs_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_prefs_radius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/textView_prefs_radius_unit"
        app:layout_constraintStart_toEndOf="@+id/textView_prefs_radius"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_prefs_radius_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/settings_radius_unit"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_prefs_radius"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/com_facebook_button_background"
        android:drawableLeft="@drawable/com_facebook_button_icon_blue"
        android:elevation="0dp"
        android:text="@string/button_logout"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_prefs_radius"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
